css update and fix alignment

--- a/m2/public/css/style.css
+++ b/m2/public/css/style.css
@@ -22,7 +22,7 @@ body {
     box-shadow: 1px 1px 10px grey;
 }
 .shadow {
-    box-shadow: 0 2px 3px -2px gray;
+    box-shadow: 1px 1px 10px gray;
 }
 .welcome {
     margin-left: 10%;
@@ -255,13 +255,4 @@ img:hover  {
 .fixed-size {
     width:304px;
     height:228px;
-}
-
-.btn-xlarge {
-    padding: 18px 50px;
-    font-size: 22px; //change this to your desired size
-    line-height: normal;
-    -webkit-border-radius: 8px;
-       -moz-border-radius: 8px;
-            border-radius: 8px;
 }
